--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.172",
     "react-scripts": "5.0.1",
+    "react-snowfall": "^1.2.1",
     "react-tilt": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
