--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-parallax-tilt": "^1.7.172",
     "react-scripts": "5.0.1",
     "react-snowfall": "^1.2.1",
     "react-tilt": "^1.0.2",
+    "vanilla-tilt": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
