--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.11.0",
     "react-parallax-tilt": "^1.7.172",
     "react-router-dom": "^6.17.0",
