--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.11.0",
@@ -21,6 +22,7 @@
     "react-snowfall": "^1.2.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "threejs-toys": "^0.0.8",
     "vanilla-tilt": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
