--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,14 @@
   "private": true,
   "dependencies": {
     "@react-three/drei": "^9.88.11",
-    "@react-three/fiber": "^8.15.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.4",
+    "howler": "^2.2.4",
     "react": "^18.2.0",
-    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.11.0",
@@ -22,7 +21,6 @@
     "react-snowfall": "^1.2.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "threejs-toys": "^0.0.8",
     "vanilla-tilt": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
@@ -52,5 +50,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.5"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
