--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-snowfall": "^1.2.1",
+    "react-split-pane": "^0.1.92",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.160.0",
