--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-snowfall": "^1.2.1",
     "react-tilt": "^1.0.2",
+    "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.160.0",
     "vanilla-tilt": "^1.8.1",
