avinya schedule added

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-tilt": "^1.0.2",
     "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "reactjs-popup": "^2.0.6",
     "vanilla-tilt": "^1.8.1",
     "web-vitals": "^3.5.1"
   },
