story added for phone

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.11.0",
+    "react-insta-stories": "^2.6.2",
     "react-parallax-tilt": "^1.7.172",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
